<resources>

    <!-- SplashActivity -->
    <string name="download">Preparing awesomeness...</string>
    <!-- LoginActivity -->
    <string name="app_name">MeetMe</string>
    <string name="welcome_login">Bienvenue sur MeetMe !</string>
    <string name="progress_status_connect">Connexion...</string>
    <string name="progress_status_retrieving">Téléchargement des données Facebook...</string>

    <string name="facebook_app_id">1701752870109248</string>
    <string name="title_activity_maps">Map</string>


    <string name="googleMapKey">

    </string>



    <!-- EventActivity -->
    <string name="event_title">Evènement</string>
    <string name="visibilite">Qui souhaites-tu inviter?</string>
    <string name="select_amis">Choisir des amis</string>
    <string name="amis">Tous mes amis</string>
    <string name="all">Tout le monde</string>
    <string name="title">Créer un nouvel évènement</string>

    <!-- GameCreateActivity -->
    <string name="sex_target">Ciblez vous les hommes ou les femmes ?</string>
    <string name="male">Hommes</string>
    <string name="female">Femmes</string>
    <string name="game_type">Choisissez le mode de jeu :</string>
    <string name="compass">Boussole</string>
    <string name="temp">Chaud/Froid</string>

    <!-- ProfileActivity -->
    <string name="profile_title">Profil</string>
    <string name="likes_title">Likes :</string>
    <string name="likes_common_title">Likes communs:</string>
    <string name="friends_title">Amis facebook :</string>
    <string name="friends_common_title">Amis facebook communs :</string>
    <string name="description_title">Description :</string>
    <string name="description_popup_title">Entrez une nouvelle description</string>

    <!-- PubNub -->
    <string name="PublishKey">pub-c-b24d94ea-c6f3-4946-a59b-88956fc28e96</string>
    <string name="SubscribeKey">sub-c-9ebef7de-107e-11e6-a6dc-02ee2ddab7fe</string>

    <!--- Could MESSAGING -->
    <string name="apikey">AIzaSyB7vvsmhL40RrQ9P3GhTpO9aoLy56ZOxfc</string>
    <string name="SenderID">572364271911</string>

    <!-- MapsActivity -->
    <string name="no_permission_granted">Please grant location permission to MeetMe.</string>
    <string name="toast_exit">Stay with us !</string>


    <string name="drawer_open">Ouverture option map</string>
    <string name="drawer_close">Fermeture option map</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- ChatActivity-->
    <string name="send">Envoyer</string>
    <string name="input_hint">Entrez votre message...</string>

    <!-- Create Gam Activity -->
    <string name="game_desc">Description de la creation de jeux !</string>

</resources>
